@@ -4,6 +4,7 @@
 #include <dlfcn.h>
 #include <dirent.h>
 #endif
+#include <cstdio>
 #include <cstring>
 #include "qmpplugin.hpp"
 #include "qmpmainwindow.hpp"
@@ -53,6 +54,38 @@ qmpPluginManager::~qmpPluginManager()
 {
 	qmw=NULL;qsw=NULL;
 }
+void qmpPluginManager::initPlugins()
+{
+	for(unsigned i=0;i<plugins.size();++i)
+	{
+		printf("Loaded plugin: %s\n",plugins[i].path.c_str());
+		plugins[i].interface->init();
+	}
+}
 
 uint32_t qmpPluginAPI::getDivision()
 {return qmw->getPlayer()->getDivision();}
+uint32_t qmpPluginAPI::getRawTempo()
+{return qmw->getPlayer()->getRawTempo();}
+double qmpPluginAPI::getRealTempo()
+{return qmw->getPlayer()->getTempo();}
+uint32_t qmpPluginAPI::getTimeSig()
+{int n,d=0,t;qmw->getPlayer()->getCurrentTimeSignature(&n,&t);for(;t>>=1;++d);return n<<8|d;}
+int qmpPluginAPI::getKeySig()
+{return qmw->getPlayer()->getCurrentKeySignature();}
+uint32_t qmpPluginAPI::getNoteCount()
+{return qmw->getPlayer()->getFileNoteCount();}
+uint32_t qmpPluginAPI::getCurrentPolyphone()
+{return qmw->getPlayer()->getPolyphone();}
+uint32_t qmpPluginAPI::getMaxPolyphone()
+{return qmw->getPlayer()->getMaxPolyphone();}
+uint32_t qmpPluginAPI::getCurrentTimeStamp()
+{return qmw->getPlayer()->getTCeptr();}
+int qmpPluginAPI::registerEventHandlerIntf(IMidiCallBack *cb,void *userdata)
+{return qmw->getPlayer()->setEventHandlerCB(cb,userdata);}
+void qmpPluginAPI::unregisterEventHandlerIntf(int intfhandle)
+{qmw->getPlayer()->unsetEventHandlerCB(intfhandle);}
+int qmpPluginAPI::registerEventReaderIntf(IMidiCallBack *cb,void *userdata)
+{return qmw->getPlayer()->setEventReaderCB(cb,userdata);}
+void qmpPluginAPI::unregisterEventReaderIntf(int intfhandle)
+{qmw->getPlayer()->unsetEventReaderCB(intfhandle);}
